# tenere

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  example_config.toml  ops.sh
.github/workflows/: ci.yaml  release.yaml
Formula/: tenere.rb
app/components/: tts.ts
app/utils/: tts-helpers.ts
scripts/: test_tts.sh
src/: app.rs  chat.rs  chatgpt.rs  claude.rs  cli.rs  config.rs  event.rs  formatter.rs  gemini.rs  gpt.rs  handler.rs  help.rs  history.rs  lib.rs  llamacpp.rs  llm.rs  main.rs  notification.rs  ollama.rs  prompt.rs  spinner.rs  tts.rs  tui.rs  ui.rs  utils.rs  xai.rs
