[package]
name = "tenere"
version = "0.11.2"
authors = ["Badr Badri <contact@pythops.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "TUI interface for LLMs written in Rust"
readme = "README.md"
homepage = "https://github.com/pythops/tenere"
repository = "https://github.com/pythops/tenere"

[dependencies]
ansi-to-tui = "7"
arboard = "3"
async-trait = "0.1"
bat = "0.25"
clap = { version = "4", features = ["derive", "cargo"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
ratatui = { version = "0.29", features = ["all-widgets"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8" }
tui-textarea = "0.7"
unicode-width = "0.2"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"

# [profile.release]
# lto = "fat"
# strip = true
# codegen-units = 1
